--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </p>
         <p> <strong>Data Sources:</strong> 
         </p> 
-        <p> U.S. News and World Report: https://www.usnews.com/best-graduate-schools/search
+        <p> <a href="https://www.usnews.com/best-graduate-schools/search">U.S. News and World Report</a>
         </p>
         <p> Postsecondary School Location: https://catalog.data.gov/dataset/postsecondary-school-location-2016-17
         </p>
