make Post Secondary Schls hyperlink

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </p> 
         <p> <a href="https://www.usnews.com/best-graduate-schools/search">U.S. News and World Report</a>
         </p>
-        <p> Postsecondary School Location: https://catalog.data.gov/dataset/postsecondary-school-location-2016-17
+        <p> <a href="https://catalog.data.gov/dataset/postsecondary-school-location-2016-17">Postsecondary School Locations</a>
         </p>
 
         </div>  <!-- ending div for this container -->
